jalv (1.2.0) stable;

  * Tune UI update rate and ring size based on JACK rate and MIDI buffer size
    to handle the handle the maximum message rate the plugin can send.
  * Support lv2:sampleRate control ports.
  * Tolerate loading presets with port values that aren't xsd:decimal
  * Notify plugins of Jack transport changes by sending events (an atom:Blank
    with properties from the LV2 time extension)
  * Refuse to instantiate plugins which require unsupported features
  * Support LV2 buf-size extension (with all features)
  * Add Gtk3 UI
  * Port to MinGW
  * Fix Jack Session support

 -- David Robillard <d@drobilla.net>  Sun, 14 Oct 2012 18:38:53 -0400

jalv (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 18:42:42 -0400
