@@ -1,3 +1,9 @@
+jalv (1.2.1) unstable;
+
+  * Add menu bar and pass parent widget in Qt version for true UI embedding
+
+ -- David Robillard <d@drobilla.net>  Tue, 13 Nov 2012 22:02:45 -0500
+
 jalv (1.2.0) stable;
 
   * Tune UI update rate and ring size based on JACK rate and MIDI buffer size
